--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     Modified from the Debian original for Ubuntu
     Last updated: 2016-11-16
     See: https://launchpad.net/bugs/1288690
-  --><head>
+  --><head><meta name="google-site-verification" content="MO5t52LOvPgjeMgyA47j77jeV-DPKgj8I7KF_F30rBs" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Apache2 Ubuntu Default Page: It works</title>
     <style type="text/css" media="screen">
